--- a/package.json
+++ b/package.json
@@ -6,19 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-<<<<<<< Updated upstream
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-=======
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
->>>>>>> Stashed changes
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.8.0",
     "morgan": "~1.9.1"
   }
 }
