--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.8.0",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
