--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
     "morgan": "~1.9.1"
   },
