--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
