--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -24,5 +24,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
+  },
+  "engines": {
+    "npm": "6.12.1",
+    "node": "12.13.1"
   }
 }
